Edit JS to remove const from functions, and add reply when answer is NaN.

--- a/membranecalc.html
+++ b/membranecalc.html
@@ -32,10 +32,10 @@
         </div>
         <div class="top-btn">
             <div class="btn">
-                <input type="button" value="Calculate" onclick="membraneCalc()">
+                <input type="button" value="Calculate" onclick="membCalc()">
             </div>
             <div class="btn">
-                <input type="button" value="Reset" onclick="resetForm()">
+                <input type="button" value="Reset" onclick="reset()">
             </div>
         </div>
     </form>
