Added Placholders to form inputs.

--- a/membranecalc.html
+++ b/membranecalc.html
@@ -13,19 +13,19 @@
     <form class="form" id="formID">
         <div>
             <label for="membGPD">Membrane Rated GPD</label> 
-            <input id="membGPD" type="number" name="membGPD" required>
+            <input id="membGPD" type="number" name="membGPD" required placeholder="50, 75, 100, 150">
         </div>
         <div>
             <label for="membPSI">Membrane Rated PSI</label>
-            <input id="membPSI" type="number" name="membPSI" required>
+            <input id="membPSI" type="number" name="membPSI" required placeholder="50 or 65">
         </div>
         <div>        
             <label for="housePSI">House PSI</label> 
-            <input id="housePSI" type="number" name="housePSI" required>
+            <input id="housePSI" type="number" name="housePSI" required placeholder="0-80">
         </div>
         <div>
             <label for="houseTemp">House Water Temp (F°)</label> 
-            <input id="houseTemp" type="number" name="houseTemp" required>
+            <input id="houseTemp" type="number" name="houseTemp" required placeholder="0-100">
         </div>
         <div id="answer">
             <p id="final"></p>
