Added if else loop for membrane PSI, and fixed reset form function.

--- a/membranecalc.html
+++ b/membranecalc.html
@@ -15,10 +15,10 @@
             <label for="membGPD">Membrane Rated GPD</label> 
             <input id="membGPD" type="number" name="membGPD" required placeholder="50, 75, 100, 150">
         </div>
-        <div>
+        <!-- <div>
             <label for="membPSI">Membrane Rated PSI</label>
             <input id="membPSI" type="number" name="membPSI" required placeholder="50 or 65">
-        </div>
+        </div> -->
         <div>        
             <label for="housePSI">House PSI</label> 
             <input id="housePSI" type="number" name="housePSI" required placeholder="0-80">
@@ -35,7 +35,7 @@
                 <input type="button" value="Calculate" onclick="membCalc()">
             </div>
             <div class="btn">
-                <input type="button" value="Reset" onclick="reset()">
+                <input type="button" value="Reset" onclick="resetForm()">
             </div>
         </div>
     </form>
